[package]
name = "steamruster"
version = "0.0.1"
edition = "2024"
authors = ["Fraser Courtney <dev@frasercourtney.com>"]
license = "MIT or Apache-2.0"
description = "A personal tool to open steam games from the terminal"


[dependencies]
clap = { version = "4.0", features = ["derive"]}
confy = { version = "2.0.0"}
serde = "1.0.228"
serde_derive = "1.0.228"
